# rust-lambda-logging

./: README.md
lambda-logging/: Cargo.toml
lambda-logging/src/: main.rs
