[package]
name = "lambda-logging"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]

lambda_runtime = "0.10.0"
serde = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
simple_logger = "1.0" # Or another logger of your choice
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-xray = "1.15.0"
serde_json = "1.0"
env_logger = "0.9"